--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,21 @@
 .App {
   text-align: center;
   min-height: calc(100vh - 34px);
+  font-family: 'Raleway', sans-serif;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -23,20 +24,20 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .navbar_link{
   display: block;
@@ -68,12 +69,19 @@ footer {
   position: relative;
   left: 0;
   bottom: 0;
+  color: rgb(190, 189, 189);
+  font-family: 'Raleway', sans-serif;
   /* align-items: 'center'; */
 }
 
 .home {
   width: 35%;
   height: auto;
+}
+
+.weather{
+  /* align-items: left; */
+  color: rgb(87, 87, 148);
 }
 
 img {
